# multi-framework-agent-lab

./: .env.template  .envrc  .gitignore  CLAUDE.org  Makefile  README.org  SETUP.org  pyproject.toml  requirements.txt  setup.py  verification.py
agents/: base_agent.py
agents/langgraph_functional/: agent.py  run.py
agents/no_framework/: agent.py  run.py
common/: llm.py  schema.py  tools.py  utils.py
evaluation/: compare_all.py
src/multi_framework_agent/: __init__.py  core.py
tests/: test_core.py
