[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-framework-agent-lab"
version = "0.1.0"
description = "Comparing AI agent frameworks across multiple Python frameworks to evaluate developer experience, code complexity, and performance"
readme = "README.org"
requires-python = ">=3.11, <3.12"
license = {text = "MIT"}
authors = [
    {name = "AYGP-DR", email = "noreply@example.com"}
]
maintainers = [
    {name = "AYGP-DR", email = "noreply@example.com"},
    {name = "jwalsh", email = "noreply@example.com"}
]
keywords = ["ai", "agents", "frameworks", "langchain", "langgraph", "dspy", "python", "comparison"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.2",
    "litellm>=1.10.0",
    "pytest>=7.4.3",
    "jupyter>=1.0.0",
    "matplotlib>=3.8.2",
    "pandas>=2.1.3",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "mypy",
    "pytest-cov",
]

langgraph = [
    "langchain>=0.1.0",
    "langgraph>=0.1.0",
]

dspy = [
    "dspy-ai>=2.3.0",
]

google_adk = [
    "google-adk>=0.0.2",
]

inspect_ai = [
    "inspect-ai>=1.0.0",
]

smolagents = [
    "smolagents>=0.1.0",
]

pydantic_ai = [
    "pydantic-ai>=0.1.0",
]

agno = [
    "agno>=0.1.0",
]

all = [
    "langchain>=0.1.0",
    "langgraph>=0.1.0",
    "dspy-ai>=2.3.0",
    "google-adk>=0.0.2",
    "inspect-ai>=1.0.0",
    "smolagents>=0.1.0",
    "pydantic-ai>=0.1.0",
    "agno>=0.1.0",
]

[tool.setuptools]
packages = ["agents", "common"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "I", "W", "N", "D"]
ignore = ["D203", "D212"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"